some DocCheck, FindBugs and other related fixes in taskpt and sequence domain